--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^11.0",
         "laravel/legacy-factories": "^1.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
+        "spatie/laravel-permission": "^6.9",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
         "symfony/postmark-mailer": "^6.1"
